<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="26dp"
                android:src="@mipmap/ic_launcher_round"></ImageView>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editGas"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_gas"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editEthanol"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_ethanol"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/buttonCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorButton"
                android:text="@string/buttonCalc" />

            <TextView
                android:id="@+id/txtCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/txt_hint_ethanol"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/buttonClean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorButton"
                android:importantForAutofill="no"
                android:text="@string/button_clean" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorButton"
                android:enabled="false"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorButton"
                android:text="@string/button_finish"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>